Carrying forward change u0 -> u4upper0 and making necessary changes to get it to compile again.

--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -160,7 +160,7 @@
     "#include \"cctk_Parameters.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
     "void GiRaFFE_set_A_v(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
-    "                     const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,const CCTK_REAL *u0GF,\n",
+    "                     const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,const CCTK_REAL *u4upper0GF,\n",
     "                     const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
     "                     CCTK_REAL *AD0GF,CCTK_REAL *AD1GF,CCTK_REAL *AD2GF,\n",
     "                     CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF) {\n",
@@ -209,7 +209,7 @@
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  \n",
     "  GiRaFFE_set_A_v(cctkGH,cctk_lsh,cctk_nghostzones,\n",
-    "                  x,y,z,u0,\n",
+    "                  x,y,z,u4upper0,\n",
     "                  gammaUU00,gammaUU01,gammaUU02,gammaUU11,gammaUU12,gammaUU22,\n",
     "                  AD0,AD1,AD2,\n",
     "                  ValenciavU0,ValenciavU1,ValenciavU2);\n",
@@ -238,27 +238,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "global name 'gho' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-31d344837799>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# To best format this for the ETK, we'll need to register this gridfunction.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mStildeD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mixp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister_gridfunctions_for_single_rank1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AUX\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"StildeD\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mGiRaFFE_S_to_print\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m                      \u001b[0mlhrh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgfaccess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out_gfs\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"StildeD0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgho\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStildeD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mlhrh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgfaccess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out_gfs\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"StildeD1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgho\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStildeD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mlhrh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgfaccess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out_gfs\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"StildeD2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgho\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStildeD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                     \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mGiRaFFE_S_CKernel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFD_outputC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"returnstring\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGiRaFFE_S_to_print\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"outCverbose=False\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: global name 'gho' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 2: Create the C code output kernel.\n",
     "# To best format this for the ETK, we'll need to register this gridfunction.\n",
     "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"StildeD\")\n",
     "GiRaFFE_S_to_print = [\\\n",
-    "                      lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD0\"),rhs=gho.StildeD[0]),\\\n",
-    "                      lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD1\"),rhs=gho.StildeD[1]),\\\n",
-    "                      lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD2\"),rhs=gho.StildeD[2]),\\\n",
+    "                      lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD0\"),rhs=gfho.StildeD[0]),\\\n",
+    "                      lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD1\"),rhs=gfho.StildeD[1]),\\\n",
+    "                      lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD2\"),rhs=gfho.StildeD[2]),\\\n",
     "                     ]\n",
     "\n",
     "GiRaFFE_S_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFE_S_to_print,params=\"outCverbose=False\")\n",
@@ -269,7 +257,7 @@
     "                                   GiRaFFE_S_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "# Step 4: Write the C code kernel to file.\n",
-    "with open(\"GiRaFFE_HO/src/GiRaFFE_HO_Stilde.h\", \"w\") as file:\n",
+    "with open(\"GiRaFFEfood_HO/src/GiRaFFEfood_HO_Stilde.h\", \"w\") as file:\n",
     "    file.write(str(GiRaFFE_S_looped))\n"
    ]
   },
@@ -282,9 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEfood_HO/src/StildeD_from_initial_data.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFEfood_HO/src/StildeD_from_initial_data.c\n",
     "#include <stdio.h>\n",
@@ -304,7 +300,7 @@
     "                  CCTK_REAL *StildeD0GF,CCTK_REAL *StildeD1GF,CCTK_REAL *StildeD2GF){\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
-    "#include \"GiRaFFE_HO_Stilde.h\"\n",
+    "#include \"GiRaFFEfood_HO_Stilde.h\"\n",
     "\n",
     "}\n",
     "\n",
@@ -338,9 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEfood_HO/interface.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFEfood_HO/interface.ccl\n",
     "implements: GiRaFFEfood_HO\n",
@@ -358,9 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEfood_HO/param.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFEfood_HO/param.ccl\n",
     "shares: grid\n",
@@ -396,9 +408,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEfood_HO/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFEfood_HO/schedule.ccl\n",
     "STORAGE: GiRaFFE_HO::GiRaFFE_vars[3]\n",
@@ -475,9 +495,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFEfood_HO/src/make.code.defn\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFEfood_HO/src/make.code.defn\n",
     "SRCS = InitialData.c \\\n",
