--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -313,11 +313,11 @@
     "# Step 2.0.a: import the four-velocity, as written in terms of the Valencia 3-velocity\n",
     "uD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"uD\")\n",
     "uU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"uU\")\n",
-    "u4U0 = gri.register_gridfunctions(\"AUX\",\"u4U0\")\n",
+    "u4upper0 = gri.register_gridfunctions(\"AUX\",\"u4upper0\")\n",
     "\n",
     "for i in range(DIM):\n",
-    "    uD[i] = u0b.uD[i]\n",
-    "    uU[i] = u0b.uU[i]"
+    "    uD[i] = u0b.uD[i].subs(u0b.u0,u4upper0)\n",
+    "    uU[i] = u0b.uU[i].subs(u0b.u0,u4upper0)\n"
    ]
   },
   {
@@ -342,10 +342,10 @@
     "smallb4U = ixp.zerorank1(DIM=4)\n",
     "smallb4D = ixp.zerorank1(DIM=4)\n",
     "for mu in range(4):\n",
-    "    smallb4U[mu] = u0b.smallb4U[mu]\n",
-    "    smallb4D[mu] = u0b.smallb4D[mu]\n",
+    "    smallb4U[mu] = u0b.smallb4U[mu].subs(u0b.u0,u4upper0)\n",
+    "    smallb4D[mu] = u0b.smallb4D[mu].subs(u0b.u0,u4upper0)\n",
     "\n",
-    "smallb2 = u0b.smallb2"
+    "smallb2 = u0b.smallb2.subs(u0b.u0,u4upper0)\n"
    ]
   },
   {
@@ -375,7 +375,7 @@
     "# Step 2.1: Construct the electromagnetic stress-energy tensor\n",
     "# Step 2.1.a: Set up the four-velocity vector\n",
     "u4U = ixp.zerorank1(DIM=4)\n",
-    "u4U[0] = u4U0\n",
+    "u4U[0] = u4upper0\n",
     "for i in range(DIM):\n",
     "    u4U[i+1] = uU[i]\n",
     "\n",
@@ -431,10 +431,10 @@
     "\\begin{align}\n",
     "{\\rm Term\\ B} &= \\partial_j (b^2 u^j u^\\mu) \\\\\n",
     "              &= \\partial_j b^2 u^j u^\\mu + b^2 \\partial_j u^j u^\\mu + b^2 u^j \\partial_j u^\\mu \\\\\n",
-    "              &= \\underbrace{\\left(b^2\\right)_{,j} u^j u^\\mu + b^2 u^j_{,j} u^\\mu + b^2 u^j u^{\\mu}_{,j}}_{\\rm To\\ Term\\ 2\\ below} \\\\\n",
+    "              &= \\underbrace{\\left(b^2\\right)_{,j} u^j u^\\mu}_{\\rm To\\ Term\\ 3\\ below} + \\underbrace{b^2 u^j_{,j} u^\\mu + b^2 u^j u^{\\mu}_{,j}}_{\\rm To\\ Term\\ 2\\ below} \\\\\n",
     "{\\rm Term\\ C} &= \\partial_j \\left(\\frac{b^2}{2} g^{j\\mu}\\right) \\\\\n",
     "              &= \\frac{1}{2} \\left( \\partial_j b^2 g^{j\\mu} + b^2 \\partial_j g^{j\\mu} \\right) \\\\\n",
-    "              &= \\underbrace{\\frac{1}{2} \\left(b^2\\right)_{,j} g^{j\\mu} + \\frac{b^2}{2} g^{j\\mu}_{\\ ,j}}_{\\rm To\\ Term\\ 3\\ below} \\\\\n",
+    "              &= \\underbrace{\\frac{1}{2} \\left(b^2\\right)_{,j} g^{j\\mu}}_{\\rm To\\ Term\\ 3\\ below} + \\underbrace{\\frac{b^2}{2} g^{j\\mu}_{\\ ,j}}_{\\rm To\\ Term\\ 2\\ below} \\\\\n",
     "{\\rm Term\\ D} &= \\partial_j (b^j b^\\mu) \\\\\n",
     "              &= \\underbrace{b^j_{,j} b^\\mu + b^j b^\\mu_{,j}}_{\\rm To\\ Term\\ 2\\ below}\\\\\n",
     "\\end{align}\n",
@@ -587,7 +587,7 @@
    "outputs": [],
    "source": [
     "alphau0 = gri.register_gridfunctions(\"AUX\",\"alphau0\")\n",
-    "alphau0 = alpha * u4U0\n",
+    "alphau0 = alpha * u4upper0\n",
     "alphau0_dD = ixp.declarerank1(\"alphau0_dD\")\n",
     "uU_dD = ixp.declarerank2(\"uU_dD\",\"nosym\")\n",
     "uD_dD = ixp.declarerank2(\"uD_dD\",\"nosym\")\n",
@@ -866,9 +866,9 @@
     "\n",
     "# We'll need derivatives of u4U for the next part: \n",
     "u4UdD = ixp.zerorank2(DIM=4)\n",
-    "u4U0_dD = ixp.declarerank1(\"u4U0_dD\") # Note that derivatives can't be done in 4-D with the current version of NRPy\n",
+    "u4upper0_dD = ixp.declarerank1(\"u4upper0_dD\") # Note that derivatives can't be done in 4-D with the current version of NRPy\n",
     "for i in range(DIM):\n",
-    "    u4UdD[0][i+1] = u4U0_dD[i]\n",
+    "    u4UdD[0][i+1] = u4upper0_dD[i]\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        u4UdD[i+1][j+1] = uU_dD[i][j]\n"
@@ -1099,7 +1099,7 @@
     "    A_rhsD[i] = -AevolParen_dD[i]\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            A_rhsD[i] += LeviCivitaTensorDDD[i][j][k]*(uU[j]/u4U0)*BU[k]\n",
+    "            A_rhsD[i] += LeviCivitaTensorDDD[i][j][k]*(uU[j]/u4upper0)*BU[k]\n",
     "            \n",
     "psi6Phi_rhs = -xi*alpha*psi6Phi\n",
     "for j in range(DIM):\n",
@@ -1208,7 +1208,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 113447 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 124244 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
