--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -285,6 +285,7 @@
     "# Step 5: Build the expression for \\tilde{S}_i\n",
     "StildeD = ixp.zerorank1()\n",
     "BU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"BU\") # Reset so that NRPy will access stored values of BU\n",
+    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\") # Reset so that NRPy will access stored values of ValenciavU\n",
     "B2 = sp.sympify(0)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
