Corrected a small typo in the derivation of g^{\mu \nu}_{,k}.

--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "# Step 2: Create the C code output kernel.\n",
     "# To best format this for the ETK, we'll need to register this gridfunction.\n",
-    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
+    "#ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
     "GiRaFFEfood_A_v_to_print = [\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD0\"),rhs=gfho.AD[0]),\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD1\"),rhs=gfho.AD[1]),\\\n",
