Restructured into two separate functions to allow correct access to ValenciavU in the StildeD routine.

--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "# Step 2: Create the C code output kernel.\n",
     "# To best format this for the ETK, we'll need to register this gridfunction.\n",
-    "#ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
+    "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
     "GiRaFFEfood_A_v_to_print = [\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD0\"),rhs=gfho.AD[0]),\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD1\"),rhs=gfho.AD[1]),\\\n",
@@ -241,6 +241,8 @@
    "outputs": [],
    "source": [
     "# Step 2: Create the C code output kernel.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "gfho.GiRaFFEfood_HO_ID_converter()\n",
     "# To best format this for the ETK, we'll need to register this gridfunction.\n",
     "StildeD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"StildeD\")\n",
     "GiRaFFE_S_to_print = [\\\n",
@@ -453,6 +455,10 @@
     "  WRITES: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
     "  WRITES: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
     "} \"Initial data for GiRaFFE\"\n",
+    "\n",
+    "schedule group GiRaFFE_ID_Converter at CCTK_INITIAL after HydroBase_Initial before Convert_to_HydroBase\n",
+    "{\n",
+    "} \"Translate ET-generated, HydroBase-compatible initial data and convert into variables used by GiRaFFE\"\n",
     "\n",
     "schedule StildeD_from_initial_data IN GiRaFFE_ID_Converter as first_initialdata before TOV_Initial_Data\n",
     "{\n",
