--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -264,6 +264,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### First NRPy+ Module Code Validation\n",
+    "\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
+      "Multiplying ASphD[2] by -xx1/(xx0**2 + xx1**2) to set AD[0]\n",
+      "Multiplying ASphD[2] by xx0/(xx0**2 + xx1**2) to set AD[1]\n",
+      "Multiplying ASphD[2] by 0 to set AD[2]\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
+      "AD[0] - gfho.AD[0] = 0\n",
+      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
+      "AD[1] - gfho.AD[1] = 0\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
+      "AD[2] - gfho.AD[2] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reset the list of gridfunctions, as registering a gridfunction\n",
+    "#   twice will spawn an error.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
+    "\n",
+    "import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
+    "gfho.GiRaFFEfood_HO()\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
+    "\n",
+    "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "\n",
+    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
+    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='step5'></a>\n",
     "\n",
     "### Step 5.0: Build the expression for $\\tilde{S}_i$\n",
@@ -278,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -322,30 +390,11 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
-      "Multiplying ASphD[2] by -xx1/(xx0**2 + xx1**2) to set AD[0]\n",
-      "Multiplying ASphD[2] by xx0/(xx0**2 + xx1**2) to set AD[1]\n",
-      "Multiplying ASphD[2] by 0 to set AD[2]\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
-      "AD[0] - gfho.AD[0] = 0\n",
       "StildeD[0] - gfho.StildeD[0] = 0\n",
-      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
-      "AD[1] - gfho.AD[1] = 0\n",
       "StildeD[1] - gfho.StildeD[1] = 0\n",
-      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
-      "AD[2] - gfho.AD[2] = 0\n",
       "StildeD[2] - gfho.StildeD[2] = 0\n"
      ]
     }
@@ -357,19 +406,23 @@
     "\n",
     "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
-    "import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
-    "gfho.GiRaFFEfood_HO()\n",
+    "#import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
+    "gfho.GiRaFFEfood_HO_ID_converter()\n",
     "\n",
     "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "for i in range(DIM):\n",
-    "\n",
-    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
-    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n",
     "    print(\"StildeD[\"+str(i)+\"] - gfho.StildeD[\"+str(i)+\"] = \" + str(StildeD[i] - gfho.StildeD[i]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
