Corrected several errors and typos.

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -75,7 +75,7 @@
     "1. Next, declare some gridfunctions that are provided as input to the equations:\n",
     "    1. $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$: These ADM 3+1 metric quantities are declared in the ADMBase Einstein Toolkit thorn, and are assumed to be made available to $\\texttt{GiRaFFE}$ at this stage.\n",
     "    1. The Valencia 3-velocity $v^i_{(n)}$ and vector potential $A_i$: Declared by $\\texttt{GiRaFFE}$, and will have their initial values set in the separate thorn **GiRaFFEfood_HO**.\n",
-    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently "
+    "    1. The magnetic field as measured by a normal observer $B^i$: The quantities evolved forward in time in $\\texttt{GiRaFFE}$ do not include the Valencia 3-velocity, so this quantity is not automatically updated. Instead, we compute it based on the evolved quantity $\\tilde{S}_i$ and $B^i = \\epsilon^{ijk} \\partial_j A_k$ (where $A_k$ is another evolved quantity and $\\epsilon^{ijk}$ is the Levi-Civita tensor). $B^i$ is evaluated using finite differences of $A_k$ in a separate function, though it can only be evaluated consistently **(Error check: how does this sentence end?)**"
    ]
   },
   {
@@ -210,7 +210,8 @@
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            # \\gamma_{ik} \\beta^k_{,j} + \\beta^k \\gamma_{ik,j}\n",
-    "            betaDdD[i][j] = gammaDD[i][k] * betaU_dD[k][j] + betaU[k] * gammaDD_dD[i][k][j]\n",
+    "            betaDdD[i][j] += gammaDD[i][k] * betaU_dD[k][j] + betaU[k] * gammaDD_dD[i][k][j]\n",
+    "#Error check: changed = to += above\n",
     "\n",
     "# Step 1.2.c: Set the 00 components\n",
     "# Step 1.2.c.i: Term 1: -2\\alpha \\alpha_{,l}\n",
@@ -767,8 +768,10 @@
     "        \n",
     "for k in range(DIM):\n",
     "    for i in range(DIM):\n",
-    "        # Term 1:                                    2 \\beta^i \\alpha_{,k} / \\alpha^3\n",
-    "        g4UUdD[i+1][0][k+1] = g4UUdD[0][i+1][k+1] = 2 * betaU[i] * alpha * alpha_dD[k] / alpha**3\n"
+    "        # Term 2:                                    -2 \\beta^i \\alpha_{,k} / \\alpha^3\n",
+    "        g4UUdD[i+1][0][k+1] = g4UUdD[0][i+1][k+1] += -2 * betaU[i] * alpha_dD[k] / alpha**3\n",
+    "# Error check: Term 1 -> Term 2; fixed = -> +=\n",
+    "#              Fixed extraneous factor of alpha and incorrect sign."
    ]
   },
   {
@@ -844,7 +847,8 @@
     "\n",
     "\\[Back to [List of Derivatives](#table2)\\]\n",
     "\n",
-    "We will now construct this term by term. Term 1 is straightforward: $${\\rm Term\\ 1} = \\gamma_{\\mu i,j} T^{\\mu j}_{\\rm EM}.$$"
+    "We will now construct this term by term. Term 1 is straightforward: $${\\rm Term\\ 1} = g_{\\mu i,j} T^{\\mu j}_{\\rm EM}.$$\n",
+    "**Error check: fixed typo $\\gamma$ -> $g$**"
    ]
   },
   {
