--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -761,7 +761,16 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-cf23cb695914>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-cf23cb695914>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    g4UUdD[i+1][0][k+1] = g4UUdD[0][i+1][k+1] += -2 * betaU[i] * alpha_dD[k] / alpha**3\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "for k in range(DIM):\n",
     "    for i in range(DIM):\n",
@@ -770,8 +779,9 @@
     "        \n",
     "for k in range(DIM):\n",
     "    for i in range(DIM):\n",
-    "        # Term 2:                                    -2 \\beta^i \\alpha_{,k} / \\alpha^3\n",
-    "        g4UUdD[i+1][0][k+1] = g4UUdD[0][i+1][k+1] += -2 * betaU[i] * alpha_dD[k] / alpha**3\n",
+    "        # Term 2:              -2 \\beta^i \\alpha_{,k} / \\alpha^3\n",
+    "        g4UUdD[i+1][0][k+1] += -2 * betaU[i] * alpha_dD[k] / alpha**3\n",
+    "        g4UUdD[0][i+1][k+1] += -2 * betaU[i] * alpha_dD[k] / alpha**3\n",
     "# Error check: Term 1 -> Term 2; fixed = -> +=\n",
     "#              Fixed extraneous factor of alpha and incorrect sign."
    ]
@@ -791,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,46 +1143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::xi\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
-      "\n",
-      "Consistency check between GiRaFFE_Higher_Order tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "alphau0 - gho.alphau0 = 0\n",
-      "alpsqrtgam - gho.alpsqrtgam = 0\n",
-      "AevolParen - gho.AevolParen = 0\n",
-      "psi6Phi_rhs - gho.psi6Phi_rhs = 0\n",
-      "uU[0] - gho.uU[0] = 0\n",
-      "uD[0] - gho.uD[0] = 0\n",
-      "PevolParenU[0] - gho.PevolParenU[0] = 0\n",
-      "Stilde_rhsD[0] - gho.Stilde_rhsD[0] = 0\n",
-      "A_rhsD[0] - gho.A_rhsD[0] = 0\n",
-      "uU[1] - gho.uU[1] = 0\n",
-      "uD[1] - gho.uD[1] = 0\n",
-      "PevolParenU[1] - gho.PevolParenU[1] = 0\n",
-      "Stilde_rhsD[1] - gho.Stilde_rhsD[1] = 0\n",
-      "A_rhsD[1] - gho.A_rhsD[1] = 0\n",
-      "uU[2] - gho.uU[2] = 0\n",
-      "uD[2] - gho.uD[2] = 0\n",
-      "PevolParenU[2] - gho.PevolParenU[2] = 0\n",
-      "Stilde_rhsD[2] - gho.Stilde_rhsD[2] = 0\n",
-      "A_rhsD[2] - gho.A_rhsD[2] = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reset the list of gridfunctions, as registering a gridfunction\n",
     "#   twice will spawn an error.\n",
@@ -1208,27 +1183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 114497 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GiRaFFE_Higher_Order.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_Higher_Order.tex\n",
