--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -868,7 +868,7 @@
     "    file.write(\"int get_interp_order(const int InterpCounter) {\\n\")\n",
     "    for i in range(1,which_InterpCounter):\n",
     "        file.write(\"    if(InterpCounter==\"+str(i)+\") return \"+gf_interp_list[i].order+\";\\n\")\n",
-    "    file.write(\"}\\n\")"
+    "    file.write(\"    return -1;\\n}\\n\")"
    ]
   },
   {
