--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "<a id='top'></a>\n",
-    "## $\\texttt{GiRaFFEfood}$: An Einstein Toolkit Initial Data Thorn for $\\texttt{GiRaFFE}$\n",
+    "\n",
+    "# $\\texttt{GiRaFFEfood}$: An Einstein Toolkit Initial Data Thorn for $\\texttt{GiRaFFE}$\n",
+    "$$\\label{top}$$\n",
     "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-GiRaFFEfood_HO.ipynb) on using NRPy+ to construct these Exact Wald initial data as SymPy expressions.\n"
    ]
@@ -28,24 +30,30 @@
     "1. Run the Primitive-to-conservative solver to calculate $\\tilde{S}_i$.\n",
     "\n",
     "#### Table of Contents:\n",
-    "1. [Call on NRPy+ to convert the SymPy expression for the Eact Wald initial data into a C-code kernel.](#step1)\n",
-    "    1. [Step 1.1: Import NRPy+ core modules and the GiRaFFE module](#step1.1)\n",
-    "1. [Interfacing with the Einstein Toolkit](#step2)\n",
-    "    1. [Constructing the Einstein Toolkit C-code calling functions that include the C code kernels](#step2a)\n",
-    "    1. [CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure](#step2b)\n",
-    "        1. [interface.ccl](#step2b.i)\n",
-    "        1. [param.ccl](#step2b.ii)\n",
-    "        1. [schedule.ccl](#step2b.iii)\n",
-    "    1. [Add the C file to Einstein Toolkit compilation list.](#step2c)\n",
+    "1. [Step 1](#step1): Call on NRPy+ to convert the SymPy expression for the Eact Wald initial data into a C-code kernel.\n",
+    "    1. [Step 1.1](#step1p1): Import NRPy+ core modules and the GiRaFFE module\n",
+    "1. [Step 2](#step2): Interfacing with the Einstein Toolkit\n",
+    "    1. [Step 2.1](#step2a): Constructing the Einstein Toolkit C-code calling functions that include the C code kernels\n",
+    "    1. [Step 2.2](#step2b): CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "        1. [Step 2.2.i](#step2bi): interface.ccl\n",
+    "        1. [Step 2.2.ii](#step2bii): param.ccl\n",
+    "        1. [Step 2.2.iii](#step2biii): schedule.ccl\n",
+    "    1. [Step 2.3](#step2c): Add the C file to Einstein Toolkit compilation list.\n",
+    "\n",
+    "<a id='step1'></a>\n",
     "\n",
     "## Step 1: Call on NRPy+ to convert the SymPy expression for the Eact Wald initial data into a C-code kernel. \n",
-    "<a id='step1'></a>\n",
+    "$$\\label{step1}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "After importing the core modules, we will set $\\text{GridFuncMemAccess}$ to $\\text{ETK}$. SymPy expressions for plane wave initial data are written inside [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO.py), and we simply import them for use here.\n",
     "\n",
+    "<a id='step1p1'></a>\n",
+    "\n",
     "### Step 1.1: Import NRPy+ core modules and the GiRaFFE module\n",
-    "<a id='step1.1'></a>\n",
+    "$$\\label{step1p1}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set \"grid::GridFuncMemAccess\" to \"ETK\". We will then import the GiRaFFEfood_HO.py module we previously created and run its main function to generate the SymPy for the expressions we want."
@@ -128,12 +136,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: Interfacing with the Einstein Toolkit\n",
     "<a id='step2'></a>\n",
+    "\n",
+    "### Step 2: Interfacing with the Einstein Toolkit\n",
+    "$$\\label{step2}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
     "<a id='step2a'></a>\n",
+    "\n",
+    "#### Step 2.1: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
+    "$$\\label{step2a}$$\n",
     "\n",
     "We will write another C file with the functions we need here."
    ]
@@ -323,13 +336,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
     "<a id='step2b'></a>\n",
+    "\n",
+    "### Step 2.2: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "$$\\label{step2b}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
-    "<a id='step2b.i'></a>\n",
+    "<a id='step2bi'></a>\n",
+    "\n",
+    "$$\\label{step2bi}$$\n",
+    "\n",
     "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. Specifically, this file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
     "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables that exist and are declared \"public\" within those functions."
    ]
@@ -357,7 +376,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step2b.ii'></a>\n",
+    "<a id='step2bii'></a>\n",
+    "\n",
+    "$$\\label{step2bii}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "2. $\\text{param.ccl}$: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3)."
    ]
@@ -401,7 +423,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='step2b.iii'></a>\n",
+    "<a id='step2biii'></a>\n",
+    "\n",
+    "$$\\label{step2biii}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. $\\text{schedule.ccl}$'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
     "\n",
@@ -493,7 +518,10 @@
    "metadata": {},
    "source": [
     "<a id='step2c'></a>\n",
-    "#### Step 2c: Add the C file to Einstein Toolkit compilation list.\n",
+    "\n",
+    "#### Step 2.2: Add the C file to Einstein Toolkit compilation list.\n",
+    "$$\\label{step2c}$$\n",
+    "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
     "We will also need $\\text{make.code.defn}$, which indicates the list of files that need to be compiled. This thorn only has the one C file to compile."
@@ -516,6 +544,44 @@
     "%%writefile GiRaFFEfood_HO/src/make.code.defn\n",
     "SRCS = InitialData.c \\\n",
     "       StildeD_from_initial_data.c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output to $\\LaTeX$, then PDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb to latex\n",
+      "[NbConvertApp] Writing 51438 bytes to Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-GiRaFFEfood_HO.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
