Fixed some bullet-pointed lists.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -392,12 +392,11 @@
     "Now that we have generated the C code kernel *GiRaFFE_RHSs.h* and the parameters file *NRPy_params.h*, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in schedule.ccl below).\n",
     "\n",
     "Also, we will write the logic that determines which files are called where in order to calculate $B^i$ here. \n",
+    "\n",
     "1. Take the primary finite differencing order $N$ from the param.ccl file. Fill in the interior points with the corresponding FD order. \n",
     "1. Then, for each face, at $0+{\\rm cctk_nghostzones[face]}-1$ and ${\\rm cctk_lsh[face]}-{\\rm cctk_nghostzones[face]}+1$, calculate $B^i$ at order $N-2$\n",
-    "1. Continue moving outwards: at the points \n",
-    "$0+{\\rm cctk_nghostzones[face]}-p$ and \n",
-    "${\\rm cctk_lsh[face]}-{\\rm cctk_nghostzones[face]}+p$, calculate B at order $N-2p$.\n",
-    "1. When ${\\rm cctk_nghostzones[face]}-p = 0$, use the upwinding and downwinding derivatives for the appropriate face."
+    "1. Continue moving outwards: at the points $0+{\\rm cctk_nghostzones[face]}-p$ and ${\\rm cctk_lsh[face]}-{\\rm cctk_nghostzones[face]}+p$, calculate B at order $N-2p$.\n",
+    "1. When ${\\rm cctk_nghostzones[face]}-p = 0$, use the upwinding and downwinding derivatives for the appropriate face.\n"
    ]
   },
   {
@@ -1848,7 +1847,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 153356 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 153469 bytes to Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1868,6 +1867,13 @@
     "!pdflatex -interaction=batchmode Tutorial-ETK_thorn-GiRaFFE_Higher_Order.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
