ScalarWave tutorials: Improve plotting scripts/convergence test methodology.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -122,7 +122,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 38.3228371143 seconds.\n"
+      "Finished in 35.462695837 seconds.\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 10.5922379494 seconds.\n"
+      "Finished in 11.1074118614 seconds.\n"
      ]
     }
    ],
@@ -1091,13 +1091,13 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 7.44676303864 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
+      "Finished in 8.03568601608 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1912.30 | gp/s 5.39e+05\n",
-      "Finished in 14.1512868404 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
+      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 1706.08 | gp/s 4.80e+05\n",
+      "Finished in 15.8539938927 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 608.84 | gp/s 5.42e+05\n",
-      "Finished in 44.3934178352 seconds.\n"
+      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 561.84 | gp/s 5.00e+05\n",
+      "Finished in 48.100153923 seconds.\n"
      ]
     }
    ],
@@ -1172,8 +1172,8 @@
     "pl_ymax = +2.5\n",
     "\n",
     "grid_x, grid_y = np.mgrid[pl_xmin:pl_xmax:100j, pl_ymin:pl_ymax:100j]\n",
-    "points96 = np.zeros((96*16*2, 2))\n",
-    "for i in range(96*16*2):\n",
+    "points96 = np.zeros((len(x96), 2))\n",
+    "for i in range(len(x96)):\n",
     "    points96[i][0] = x96[i]\n",
     "    points96[i][1] = y96[i]\n",
     "\n",
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1261,8 +1261,8 @@
    ],
    "source": [
     "x72,y72,valuesCF72,valuesHam72 = np.loadtxt('out72.txt').T #Transposed for easier unpacking\n",
-    "points72 = np.zeros((72*12*2, 2))\n",
-    "for i in range(72*12*2):\n",
+    "points72 = np.zeros((len(x72), 2))\n",
+    "for i in range(len(x72)):\n",
     "    points72[i][0] = x72[i]\n",
     "    points72[i][1] = y72[i]\n",
     "\n",
