Fixed loop bounds for a greek index (3- to 4-D).

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -302,7 +302,7 @@
     "u^i &= u^0 (\\alpha v^i_{(n)} - \\beta^i), \\\\\n",
     "u_j &= \\alpha u^0 \\gamma_{ij} v^i_{(n)},\n",
     "\\end{align}\n",
-    "and $v^i_{(n)}$ is the Valencia three-velocity. These have already been constructed in terms of the Valencia 3-velocity and other 3+1 ADM quantities by the u0_smallb_Poynting__Cartesian.py module, so we can simply import these variables:"
+    "where $v^i_{(n)}$ is the Valencia three-velocity. These have already been constructed in terms of the Valencia 3-velocity and other 3+1 ADM quantities by the u0_smallb_Poynting__Cartesian.py module, so we can simply import these variables:"
    ]
   },
   {
@@ -641,7 +641,7 @@
     "                      &= g_{\\mu\\nu,j} b^\\mu b^\\nu + g_{\\mu\\nu} b^\\mu_{,j} b^\\nu + g_{\\mu\\nu} b^\\mu b^\\nu_{,j} \\\\\n",
     "                      &= g_{\\mu\\nu,j} b^\\mu b^\\nu + 2 g_{\\mu\\nu} b^\\mu_{,j} b^\\nu.\n",
     "\\end{align}\n",
-    "We have already defined the spatial derivatives of the four-metric $g_{\\mu\\nu,j}$ in [this section](#step3); we have also defined the spatial derivatives of spatial components of $b^\\mu$, $b^i_{,k}$ in [this section](#bideriv). Notice the above expression requires spatial derivatives of the *zeroth* component of $b^\\mu$ as well, $b^0_{,j}$, which we will now compute. Starting with the definition, and applying the quotient rule:\n",
+    "We have already defined the spatial derivatives of the four-metric $g_{\\mu\\nu,j}$ in [this section](#step3); we have also defined the spatial derivatives of spatial components of $b^\\mu$, $b^i_{,k}$ in [this section](#bideriv). Notice the above expression for $\\partial_j T^j_{{\\rm EM} i}$ requires spatial derivatives of the *zeroth* component of $b^\\mu$ as well, $b^0_{,j}$, which we will now compute. Starting with the definition, and applying the quotient rule:\n",
     "\\begin{align}\n",
     "b^0 &= \\frac{u_k B^k}{\\sqrt{4\\pi}\\alpha}, \\\\\n",
     "\\rightarrow b^0_{,j} &= \\frac{1}{\\sqrt{4\\pi}} \\frac{\\alpha \\left( u_{k,j} B^k + u_k B^k_{,j} \\right) - u_k B^k \\alpha_{,j}}{\\alpha^2} \\\\\n",
@@ -894,7 +894,7 @@
    "source": [
     "# Step 2.2.e.ii: Compose derivatives of u4U:\n",
     "u4UdD = ixp.zerorank2(DIM=4)\n",
-    "u4upper0_dD = ixp.declarerank1(\"u4upper0_dD\") # We define u4upper0 as a separate gridfunction so as not to confuse\n",
+    "u4upper0_dD = ixp.declarerank1(\"u4upper0_dD\") # We defined u4upper0 as a separate gridfunction so as not to confuse\n",
     "                                              # NRPy+'s finite difference generator code.\n",
     "for i in range(DIM):\n",
     "    u4UdD[0][i+1] = u4upper0_dD[i]\n",
@@ -1008,8 +1008,9 @@
     "# The first term: g_{i\\mu} T^{\\mu j}_{\\rm EM} \\partial_j (\\alpha \\sqrt{\\gamma})\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        for mu in range(DIM):\n",
+    "        for mu in range(4):\n",
     "            Stilde_rhsD[i] += -g4DD[i+1][mu]*T4EMUU[mu][j+1]*alpsqrtgam_dD[j]\n",
+    "# Error check: mu needs to run 0 to 3\n",
     "\n",
     "# The second term: \\alpha \\sqrt{\\gamma} \\partial_j T^j_{{\\rm EM} i}\n",
     "for i in range(DIM):\n",
